tests/bugs/faulty_tuple_div_670.sy
start :: fn do
  14.0 / 2 <=> 7
end

// error: A 'float' cannot be a 'int'
